# rust-markdown-notebook

./: .gitignore  Cargo.toml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  turbo.json
.cspell/: custom-dictionary-workspace.txt
core/: Cargo.toml
core/src/: kernel.rs  main.rs  notebook.rs
rust_markdown_notebook/: Cargo.toml
rust_markdown_notebook/src/: kernel.rs  lib.rs  main.rs  notebook.rs
rust_markdown_notebook_wasm/: Cargo.toml  package.json
rust_markdown_notebook_wasm/src/: lib.rs
vscode-extension/: CHANGELOG.md  README.md  package.json  pnpm-lock.yaml
vscode-extension/src/: controller.ts  extension.ts  serializer.ts
