[workspace]
members = ["rust_markdown_notebook", "rust_markdown_notebook_wasm"]

[workspace.dependencies]
anyhow = "1"
pulldown-cmark = { version = "0.9", features = ["serde"] }
pulldown-cmark-to-cmark = "10"
syn = { version = "2", features = ["parsing", "full", "extra-traits"] }
quote = "1"
serde = "1"

wasm-bindgen = "0.2"
ouroboros = "0.15"
serde-wasm-bindgen = "0.5"

wasm-bindgen-test = "0.3"
