[package]
name = "rust_markdown_notebook"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { workspace = true }
pulldown-cmark = { workspace = true }
pulldown-cmark-to-cmark = { workspace = true }
syn = { workspace = true }
quote = { workspace = true }
wasm-bindgen = { workspace = true }
serde = { workspace = true }
